fix: z-index

--- a/src/styles/components/elements/form-items/electronic-signature.module.scss
+++ b/src/styles/components/elements/form-items/electronic-signature.module.scss
@@ -84,7 +84,6 @@
 
     @include mixins.crossHover {
       @include mixins.hover;
-      z-index: 1;
   
       &:active {
         @include mixins.hoverActive;
