--- a/src/styles/components/elements/form-items/select-box.module.scss
+++ b/src/styles/components/elements/form-items/select-box.module.scss
@@ -43,7 +43,6 @@
 
   @include mixins.crossHover {
     @include mixins.hover;
-    z-index: 1;
 
     &:active {
       @include mixins.hoverActive;
