--- a/src/styles/components/elements/form-items/time-picker.module.scss
+++ b/src/styles/components/elements/form-items/time-picker.module.scss
@@ -29,7 +29,6 @@
 
             @include mixins.crossHover {
               @include mixins.hover;
-              z-index: 1;
 
               &:active {
                 @include mixins.hoverActive;
